Updates for the NuGet packages, September 2023.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,8 +10,8 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  build-azure-disk-resizer:
+    name: Build Azure Disk Resizer
     runs-on: windows-latest
     defaults:
       run:
